--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.4.12/d3.min.js"></script>
 
 <!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-
-<!-- Optional theme -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+<link rel="stylesheet" href="style.css">
 
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
@@ -20,7 +17,6 @@
   body {
     margin: 0;
     padding: 0;
-
   }
 
   .node {
@@ -28,7 +24,7 @@
   }
 
   .overlay{
-      background-color:#EEE;
+      background-color:#FFFFFF;
   }
 
   .node circle {
@@ -64,7 +60,7 @@
 
   #tree-container {
     position: absolute;
-    top: 100px;
+    top: 140px;
     left:300px;
     right:0;
   }
@@ -74,14 +70,13 @@
     top: 0px;
     left:0px;
     width: 300px;
-    height: 1000px;
-    overflow: scroll;
+    top: 60px;
   }
 
   #search {
     position: absolute;
     left: 300px;
-    top: 0;
+    top: 50px;
     right: 0;
     padding: 20px;
     padding-left : 0px;
@@ -95,6 +90,11 @@
 
   #infobox {
     visibility: hidden;
+  }
+
+  #bigoraphyDiv {
+    height: 400px;
+    overflow: scroll;
   }
 
 </style>
@@ -176,8 +176,33 @@
 
 
 <body>
+   <div class="navbar navbar-default" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">
+            <span class="navbar-logo">Spotify</span>
+            <span class="navbar-title">Artist Explorer</span>
+          </a>
+        </div>
+        <div class="collapse navbar-collapse">
+          <ul class="nav navbar-nav navbar-right">
+            <li class="active"><a href="">Start Over</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </div>
     <div id="leftpane">
-        <div id="hoverwarning" class="modal-body"> Hover on an artist to get info </div>
+        <div id="hoverwarning" class="modal-body">
+          <p>Click on an artist to see related artists. </p>
+          <p>Hover over an artist to hear a sample of their music.</p>
+          <p>Enter an artist name in the search box and explore relationships between over 2,000,000 artists on Spotify.</p>
+        </div>
 
         <div id="infobox" class="modal-body">
           <h4>Artist Info </h4>
@@ -195,7 +220,9 @@
           <div id="mainGenres"> </div>
 
           <h4>Biography</h4>
-          <p id="biography"> </p>
+          <div id="bigoraphyDiv">
+            <p id="biography"> </p>
+          </div>
 
         </div>
     </div>
