--- a/index.html
+++ b/index.html
@@ -7,203 +7,8 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.4.12/d3.min.js"></script>
 
 <!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="style.css">
-
-<!-- Latest compiled and minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-
-<style type="text/css">
-
-  body {
-    margin: 0;
-    padding: 0;
-  }
-
-  .node {
-    cursor: pointer;
-  }
-
-  .overlay{
-      background-color:#FFFFFF;
-  }
-
-  .node circle {
-    fill: #fff;
-    stroke: black;
-    stroke-width: 2px;
-  }
-
-  .node text {
-    font-size:15px;
-    font-family:sans-serif;
-  }
-
-  .link {
-    fill: none;
-    stroke: #ccc;
-    stroke-width: 1.5px;
-  }
-
-  .templink {
-    fill: none;
-    stroke: red;
-    stroke-width: 3px;
-  }
-
-  .ghostCircle.show{
-      display:block;
-  }
-
-  .ghostCircle, .activeDrag .ghostCircle{
-       display: none;
-  }
-
-  #tree-container {
-    position: absolute;
-    top: 140px;
-    left:350px;
-    right:0;
-  }
-
-  #leftpane {
-    position: absolute;
-    top: 0px;
-    left:0px;
-    width: 350px;
-    top: 60px;
-  }
-
-  #search {
-    position: absolute;
-    left: 350px;
-    top: 50px;
-    right: 0;
-    padding: 20px;
-    padding-left : 0px;
-  }
-
-  #search input {
-    font-size: 40px;
-    width: 100%;
-    height: 60px;
-  }
-
-  #infobox {
-    visibility: hidden;
-  }
-
-  #bigoraphyDiv {
-    height: 300px;
-    overflow: scroll;
-  }
-
-</style>
-<script>
-   var audio = null;
-   var currentPlayingSongId = null;
-   var playMusic = true;
-   var numberOfArtistsToShow = 10;
-
-   function playMusicHandler() {
-    if(document.getElementById('playMusic').checked) {
-      playMusic = true;
-    } else {
-      playMusic = false;
-      clearMusic();
-    }
-   }
-
-   function changeNumberOfArtists(value) {
-      numberOfArtistsToShow = value;
-      document.getElementById("range").innerHTML=value;
-   }
-
-   $(function() {
-       var api = new SpotifyWebApi();
-       $("#artist-search")
-           // don't navigate away from the field on tab when selecting an item
-           .bind("keydown", function(event) {
-               if (event.keyCode === $.ui.keyCode.TAB &&
-                   $(this).autocomplete("instance").menu.active) {
-                   event.preventDefault();
-               }
-                if (event.keyCode == 13) {
-                    $(".ui-menu-item").hide();
-                }
-           })
-           .autocomplete({
-               minLength: 0,
-               source: function(request, response) {
-                   api.searchArtists(request.term + '*', function(err, data) {
-                       if (data.artists && data.artists.items.length) {
-                           res = []
-                           data.artists.items.forEach(function(artist) {
-                               res.push(artist.name);
-                           });
-                           response(res);
-                       }
-                   });
-               },
-               focus: function() {
-                   // prevent value inserted on focus
-                   return false;
-               }
-           });
-   });
-
-   var api = new SpotifyWebApi();
-
-   function playFromList(obj) {
-       console.log(obj);
-       var trackId = obj.getAttribute("data-track-id");
-       var previewUrl = obj.getAttribute("data-preview-url");
-       trac = {
-           "id": trackId,
-           "preview_url": previewUrl,
-       }
-       playForTrack(trac);
-   }
-
-   function playForTrack(track_to_play) {
-       console.log(playMusic);
-       if (!playMusic) {
-        return;
-       }
-
-       if (currentPlayingSongId == track_to_play.id) {
-           return;
-       }
-       if (currentPlayingSongId != null) {
-           audio.setAttribute('src', track_to_play.preview_url);
-           audio.load();
-           audio.play();
-       } else {
-           console.log("init sound");
-           audio = new Audio(track_to_play.preview_url);
-           audio.load();
-           audio.play();
-       }
-       currentPlayingSongId = track_to_play.id;
-   }
-
-   function clearMusic() {
-      console.log("clearing music");
-      if (audio) {
-        audio.pause();
-      }
-      currentPlayingSongId = null;
-
-   }
-
-   function playForArtist(artist) {
-       api.getArtistTopTracks(artist.id, "SE").then(function(data) {
-           var track_to_play = data.tracks[0];
-           playForTrack(track_to_play);
-       });
-   }
-
-</script>
-
+<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="css/main_css.css">
 
 <body>
    <div class="navbar navbar-default" role="navigation">
@@ -247,12 +52,11 @@
           <h4>Artist Info </h4>
           <p id="artistInfo"> </p>
 
-          <h4>Popularity Score</h4>
+          <h4>Popularity</h4>
           <p id="popularityScore"> </p>
 
           <h4>Popular Tracks</h4>
           <ul id="popularTracks"> </ul>
-
           <hr>
 
           <h4>Main Genres</h4>
@@ -272,5 +76,6 @@
         </form>
     </div>
 </body>
-<script src="dndTree.js"></script>
+<script src="js/main.js"></script>
+<script src="js/dndTree.js"></script>
 </html>
