Rename css file

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="css/style.css">
-<link rel="stylesheet" href="css/main_css.css">
+<link rel="stylesheet" href="css/main.css">
 
 <body>
    <div class="navbar navbar-default" role="navigation">
