Link out to spotify in infobox

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 
         <div id="infobox">
           <h4>Artist Info </h4>
-          <p id="artistInfo"> </p>
-          <p id="artistInfo"> </p>
+          <a id="artistName"> </a>
+          <p </p>
 
           <div id="chart_div" style="width: 350px; height: 120px;"></div>
 
