Start work on exploring genres

--- a/index.html
+++ b/index.html
@@ -38,10 +38,15 @@
     </div>
     <div id="tree-container"></div>
     <div id="search">
-        <form class="form-horizontal" role="form">
+        <form id="search-artist" class="form-horizontal" role="form">
             <input id="artist-search" class="form-control" placeholder="Search for an Artist">
         </form>
+        <form id="search-genre" class="form-horizontal" role="form">
+            <input id="genre-search" class="form-control" placeholder="Search for a Genre">
+        </form>
+
     </div>
+
     <div id="rightpane" class="modal-body warning">
         <div id="config">
           <h4>Configuration </h4>
