--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" href="">
             <span class="navbar-logo">Spotify</span>
             <span class="navbar-title">Artist Explorer</span>
           </a>
         </div>
-        <div class="collapse navbar-collapse">
+        <!--<div class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
             <li class="active"><a href="">Start Over</a></li>
           </ul>
-        </div><!--/.nav-collapse -->
+        </div>--><!--/.nav-collapse -->
       </div>
     </div>
     <div id="tree-container"></div>
@@ -44,16 +44,19 @@
         <form id="search-genre" class="form-horizontal" role="form">
             <input id="genre-search" class="form-control" placeholder="Search for a Genre">
         </form>
-
     </div>
 
     <div id="rightpane" class="modal-body warning">
         <div id="config">
           <h4>Configuration </h4>
           <input type="checkbox" checked="true" id="playMusic" onclick="playMusicHandler()"> Play Music<br>
-          <h3>#Artists to expand:</h3>
-          <input type="range" min="1" max="20" step="1" onchange="changeNumberOfArtists(this.value)"/>
-          <span id="range">10</span>
+          <div id="range-container">
+            <div id="range-desc">#Artists to expand:</div>
+            <div id="range-bar">
+              <input type="range" class="slider" min="1" max="20" step="1" onchange="changeNumberOfArtists(this.value)"/>
+              <div id="range-indicator">10</div>
+            </div>
+          </div>
         </div>
         <hr>
         <div id="hoverwarning">
