Add picture to artist search

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <ul>
             <li>Click on an artist to see related artists. </li>
             <li>Hover over an artist to hear a sample of their music.</li>
-            <li>Enter an artist name in the search box and explore relationships between over 2,000,000 artists on Spotify.</li>
+            <li>Enter an artist name or a genre in the search box and explore relationships between over 2,000,000 artists on Spotify.</li>
           </ul>
         </div>
         <div id="infobox">
