--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             </div>
             <div class="collapse navbar-collapse">
               <ul class="nav navbar-nav navbar-right">
-                <li class="active"><a href="">Start Over</a></li>
+                <li class="active"><a target="_blank" href="https://github.com/fsahin/artist-explorer">See the code</a></li>
               </ul>
             </div>
             <!--/.nav-collapse -->
