Hide Biography and Mein Genres if no data is available

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
           <h4>Popular Tracks</h4>
           <ul id="popularTracks"> </ul>
           <hr>
-          <h4>Main Genres</h4>
+          <h4 id ="main-genres-label">Main Genres</h4>
           <ul id="mainGenres"> </ul>
-          <h4>Biography</h4>
+          <h4 id ="biography-label">Biography</h4>
           <div id="bigoraphyDiv">
             <p id="biography"> </p>
           </div>
