Add links to Spotify and Echo Nest APIs

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
             <li>Hover over an artist to hear a sample of their music.</li>
             <li>Enter an artist name or a genre and explore relationships between over 2,000,000 artists on Spotify.</li>
           </ul>
+          <h4>Info</h4>
+          Artist Explorer displays data from two great music APIs: <a target="_blank" href="https://developer.spotify.com/web-api/">the Spotify Web API </a> and <a target="_blank" href="http://developer.echonest.com/docs/v4">the Echo Nest API </a>
         </div>
         <div id="infobox">
           <h4>Artist Info </h4>
