--- a/index.html
+++ b/index.html
@@ -16,10 +16,16 @@
       <div id="rightpane" class="modal-body warning">
         <div id="config">
           <h4>Configuration </h4>
-          <input type="checkbox" checked="true" id="playMusic" onclick="playMusicHandler()"> Play Music<br>
+          <div id="volume-container">
+            <div class="range-desc">Volume:</div>
+            <div class="range-bar">
+              <input type="range" class="slider" min="0" max="1" step="0.05" onchange="setVolume(this.value)"/>
+            </div>
+          </div>
+          </br>
           <div id="range-container">
-            <div id="range-desc">#Artists to expand:</div>
-            <div id="range-bar">
+            <div class="range-desc">#Artists to expand:</div>
+            <div class="range-bar">
               <input type="range" class="slider" min="1" max="20" step="1" onchange="changeNumberOfArtists(this.value)"/>
               <div id="range-indicator">10</div>
             </div>
