Use oninput instead of onchange on volume indicator

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <div id="volume-container">
             <div class="range-desc">Volume:</div>
             <div class="range-bar">
-              <input type="range" class="slider" min="0" max="1" step="0.05" onchange="setVolume(this.value)"/>
+              <input type="range" class="slider" min="0" max="1" step="0.05" oninput="setVolume(this.value)"/>
             </div>
           </div>
           </br>
