--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Artist Explorer</title>
   </head>
   <meta charset="utf-8">
   <script src="./bower_components/spotify-web-api-js/src/spotify-web-api.js"></script>
