--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               <input type="range" class="slider" min="0" max="1" step="0.05" oninput="setVolume(this.value)"/>
             </div>
           </div>
-          </br>
+
           <div id="range-container">
             <div class="range-desc">Max #artists to expand:</div>
             <div class="range-bar">
@@ -35,7 +35,7 @@
         <div id="repeat-artists-container">
           Expand already explored artists:
           <div id="checkbox-div">
-            <input type="checkbox" id="repeatArtists" onclick="setRepeatArtists()">  <br>
+            <input type="checkbox" id="repeatArtists" onclick="setRepeatArtists()">
           </div>
         </div>
         <hr>
