Look at user country to decide content availability

--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
           <p </p>
           <div id="chart_div" style="width: 350px; height: 120px;"></div>
           <h4>Popular Tracks</h4>
+          <div id="divPopularTracks">
+          </div>
           <ul id="popularTracks"> </ul>
           <hr>
           <h4 id ="main-genres-label">Main Genres</h4>
@@ -100,6 +102,7 @@
       </div>
     </div>
   </body>
+  <script language="JavaScript" src="http://www.geoplugin.net/javascript.gp" type="text/javascript"></script>
   <script src="js/dndTree.js"></script>
   <script src="js/main.js"></script>
   <script type="text/javascript" src="https://www.google.com/jsapi?autoload={'modules':[{'name':'visualization','version':'1','packages':['gauge']}]}"></script>
