--- a/index.html
+++ b/index.html
@@ -2,17 +2,21 @@
 <html>
   <head>
     <title>Artist Explorer</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.11.1/themes/smoothness/jquery-ui.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/main.css">
   </head>
-  <meta charset="utf-8">
-  <script src="./bower_components/spotify-web-api-js/src/spotify-web-api.js"></script>
-  <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-  <script src="//code.jquery.com/ui/1.11.1/jquery-ui.js"></script>
-  <link rel="stylesheet" href="//code.jquery.com/ui/1.11.1/themes/smoothness/jquery-ui.css">
-  <script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.4.12/d3.min.js"></script>
-  <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/main.css">
   <body>
+    <script>
+     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+     ga('create', 'UA-56769808-1', 'auto');
+     ga('send', 'pageview');
+    </script>
     <div class="main-container">
       <div id="rightpane">
         <div id="config">
@@ -20,14 +24,14 @@
           <div id="volume-container">
             <div class="range-desc">Volume:</div>
             <div class="range-bar">
-              <input type="range" class="slider" min="0" max="1" step="0.05" oninput="setVolume(this.value)"/>
+              <input type="range" class="slider" min="0" max="1" step="0.05" oninput="AE.setVolume(this.value)"/>
             </div>
           </div>
 
           <div id="range-container">
             <div class="range-desc">Max #artists to expand:</div>
             <div class="range-bar">
-              <input type="range" class="slider" min="1" max="20" step="1" oninput="changeNumberOfArtists(this.value)"/>
+              <input type="range" class="slider" min="1" max="20" step="1" oninput="AE.changeNumberOfArtists(this.value)"/>
               <div id="range-indicator">10</div>
             </div>
           </div>
@@ -35,7 +39,7 @@
         <div id="repeat-artists-container">
           Expand already explored artists:
           <div id="checkbox-div">
-            <input type="checkbox" id="repeatArtists" onclick="setRepeatArtists()">
+            <input type="checkbox" id="repeatArtists" onclick="AE.setRepeatArtists()">
           </div>
         </div>
         <hr>
@@ -102,36 +106,12 @@
       </div>
     </div>
   </body>
-  <script language="JavaScript" src="http://www.geoplugin.net/javascript.gp" type="text/javascript"></script>
+  <script src="http://www.geoplugin.net/javascript.gp"></script>
+  <script type="text/javascript" src="https://www.google.com/jsapi?autoload={'modules':[{'name':'visualization','version':'1','packages':['gauge']}]}"></script>
+  <script src="./bower_components/spotify-web-api-js/src/spotify-web-api.js"></script>
+  <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+  <script src="//code.jquery.com/ui/1.11.1/jquery-ui.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.4.12/d3.min.js"></script>
   <script src="js/dndTree.js"></script>
   <script src="js/main.js"></script>
-  <script type="text/javascript" src="https://www.google.com/jsapi?autoload={'modules':[{'name':'visualization','version':'1','packages':['gauge']}]}"></script>
-  <script type="text/javascript">
-    function drawChart(popularity_val) {
-
-     var popData = google.visualization.arrayToDataTable([
-       ['Popularity', popularity_val],
-     ], true);
-
-     var options = {
-       width: 300, height: 120,
-       redFrom: 80, redTo: 100,
-       yellowFrom:50, yellowTo: 80,
-       minorTicks: 5
-     };
-
-     var chart = new google.visualization.Gauge(document.getElementById('chart_div'));
-     chart.draw(popData, options);
-
-    }
-  </script>
-  <script>
-   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-   ga('create', 'UA-56769808-1', 'auto');
-   ga('send', 'pageview');
-  </script>
 </html>
