Put player funcitonality into audiPlayer.js

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <div id="volume-container">
             <div class="range-desc">Volume:</div>
             <div class="range-bar">
-              <input type="range" class="slider" min="0" max="1" step="0.05" oninput="AE.setVolume(this.value)"/>
+              <input type="range" class="slider" min="0" max="1" step="0.05" oninput="Player.setVolume(this.value)"/>
             </div>
           </div>
 
@@ -114,4 +114,5 @@
   <script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.4.12/d3.min.js"></script>
   <script src="js/dndTree.js"></script>
   <script src="js/main.js"></script>
+  <script src="js/audioPlayer.js"></script>
 </html>
