--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <title>Artist Explorer</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.11.1/themes/smoothness/jquery-ui.css">
+    <!-- <link rel="stylesheet" href="//code.jquery.com/ui/1.11.1/themes/smoothness/jquery-ui.css"> -->
+    <link rel="stylesheet" href="css/jquery-ui.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/main.css">
   </head>
@@ -108,8 +109,8 @@
   </body>
   <script type="text/javascript" src="https://www.google.com/jsapi?autoload={'modules':[{'name':'visualization','version':'1','packages':['gauge']}]}"></script>
   <script src="./bower_components/spotify-web-api-js/src/spotify-web-api.js"></script>
-  <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-  <script src="//code.jquery.com/ui/1.11.1/jquery-ui.js"></script>
+  <script src="./js/lib/jquery-1.10.2.min.js"></script>
+  <script src="./js/lib/jquery-ui-1.11.1.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.4.12/d3.min.js"></script>
   <script src="js/dndTree.js"></script>
   <script src="js/main.js"></script>
