Use onclick event on the button toredirect

--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
           <h1>Page moved</h1>
           <p class=lead>Artist Explorer has moved to <a href="https://artistexplorer.spotify.com">artistexplorer.spotify.com</a></p>
           <p>
-            <form action="https://artistexplorer.spotify.com">
-              <button  class="btn btn-lg btn-success">Go to the new site</button>
-            </form>
+            <button onclick="location.href = 'https://artistexplorer.spotify.com';"  class="btn btn-lg btn-success">Go to the new site</button>
           </p>
         </div>
       </div>
