Proxy Spotify Web api calls through local server

--- a/index.html
+++ b/index.html
@@ -251,6 +251,7 @@
   <script src="js/dndTree.js"></script>
   <script src="js/oauth-manager.js"></script>
   <script src="js/oauth-config.js"></script>
+  <script src="js/spotifyWebAPI.js"></script>
   <script src="js/main.js"></script>
   <script src="js/audioPlayer.js"></script>
 </html>
