--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
   <script src="./js/lib/jquery-ui-1.11.1.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.4.12/d3.min.js"></script>
   <script src="js/dndTree.js"></script>
+  <script src="js/spotifyWebAPI.js"></script>
   <script src="js/main.js"></script>
   <script src="js/audioPlayer.js"></script>
 </html>
