Start work on init root with existing data

--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
           </form>
         </div>
         <div id="tree-container"></div>
+        <div id="share-div"> Share it! <br> <a href="http://artistexplorer.spotify.com/txa2t3td">http://artistexplorer.spotify.com/txa2t3td </div>
       </div>
     </div>
   </body>
